# te_mini_project

./: .gitignore  README.md
src/ik/: CMakeLists.txt  package.xml
src/ik/launch/: ik_launch.py
src/ik/rviz2/: rviz_config.rviz
src/ik/src/: basic_control.cpp  ik_joint_state_publisher.cpp  serial.cpp  simple_marker.cpp
src/ik/urdf/: manipulator.urdf  manipulator2.urdf
src/marker/: CMakeLists.txt  package.xml
src/marker/src/: simple_marker.cpp
